# configurator

./: CMakeLists.txt  README.md  builder.sh  configurator.pro
forms/: dialog_window.ui  main_window.ui
include/: arrow.h  button.h  configurator.h  dialog_window.h  graphics_view.h  item.h  main_window.h  scene.h
modules/main/src/: main.cpp
modules/module_1/include/: module_1.h
modules/module_1/src/: module_1.cpp
modules/module_10/include/: module_10.h
modules/module_10/src/: module_10.cpp
modules/module_11/include/: module_11.h
modules/module_11/src/: module_11.cpp
modules/module_12/include/: module_12.h
modules/module_12/src/: module_12.cpp
modules/module_13/src/: module_13.cpp
modules/module_14/include/: module_14.h
modules/module_14/src/: module_14.cpp
modules/module_15/include/: module_15.h
modules/module_15/src/: module_15.cpp
modules/module_16/include/: module_16.h
modules/module_16/src/: module_16.cpp
modules/module_17/include/: module_17.h
modules/module_17/src/: module_17.cpp
modules/module_18/include/: module_18.h  yolo.h  yolov3-tiny.h  yolov3.h
modules/module_18/src/: module_18.cpp  yolo.cpp  yolov3-tiny.cpp  yolov3.cpp
modules/module_19/include/: detectNet.h  module_19.h
modules/module_19/src/: cudaOverlay.cu  cudaResize.cu  module_19.cpp
modules/module_2/include/: module_2.h
modules/module_2/src/: module_2.cpp
modules/module_3/include/: module_3.h
modules/module_3/src/: module_3.cpp
modules/module_4/include/: module_4.h
modules/module_4/src/: module_4.cpp
modules/module_5/src/: module_5.cpp
modules/module_6/include/: module_6.h
modules/module_6/src/: module_6.cpp
modules/module_7/include/: module_7.h
modules/module_7/src/: module_7.cpp
modules/module_8/src/: module_8.cpp
modules/module_9/include/: module_9.h
modules/module_9/src/: module_9.cpp
src/: arrow.cpp  button.cpp  configurator.cpp  dialog_window.cpp  graphics_view.cpp  item.cpp  main.cpp  main_window.cpp  scene.cpp
